--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,15 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Preahvihear&display=swap');
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0b0416;
+  --foreground: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -20,10 +24,8 @@
   }
 }
 
-/* projectset */
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: "Preahvihear", sans-serif;
-
+   font-family: "Preahvihear", sans-serif;
 }
